--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -500,7 +500,7 @@ in 4.3.1 need use order and offset
             <div class="  d-flex col-md-12 col-lg-4  order-1 order-lg-2">
 
 
-<div class="scaleable-wrapper" >
+<div class="scaleable-wrapper pg3TableAlignItems " >
 
                             <div class="aCard">
                               <div class="topRightRibbonArea">
