--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -449,7 +449,7 @@ in 4.3.1 need use order and offset
 
       <div class="shape2">
 
-        <div class="pg2InnerShape container container-fluid d-flex h-100 flex-column ">
+        <div class="pg2InnerShape container-fluid d-flex h-100  flex-column ">
 
         <!--rows should always be in containers column in row and a div in column before anything else-->
 <div class="row">
@@ -494,13 +494,13 @@ in 4.3.1 need use order and offset
 
             </div>
           </div>
-          <div class="row flex-fill d-flex">
+          <div class="row flex-fill d-flex ">
 
 
-            <div class="  d-flex col-md-12 col-lg-4  order-1 order-lg-2">
+            <div class="  d-flex col-md-12 col-lg-4  order-1 order-lg-2 ">
 
 
-<div class="scaleable-wrapper pg3TableAlignItems " >
+<div class="scaleable-wrapper  " >
 
                             <div class="aCard">
                               <div class="topRightRibbonArea">
