--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -180,17 +180,17 @@ also cause a white space at bottom because now contributes to the height-->
 
         <ul class="myflex-container">
 
-          <li><img class="aMarble " src="Images\marbles\codepen.png" alt="codepen marble"></li>
-          <li><img class="aMarble " src="Images\marbles\atom-4-logo-png-transparent.png" alt="atom marble"></li>
-          <li><img class="aMarble " src="Images\marbles\Csharp_logo.png" alt="csharp marble"></li>
-          <li><img class="aMarble " src="Images\marbles\css.png" alt="css marble"></li>
-          <li><img class="aMarble " src="Images\marbles\ejslandscape.png" alt="ejs marble"></li>
-          <li><img class="aMarble " src="Images\marbles\git.png" alt="git marble"></li>
-          <li><img class="aMarble " src="Images\marbles\html.png" alt="html marble"></li>
-          <li><img class="aMarble " src="Images\marbles\javascript-shield.png" alt="js marble"></li>
-          <li><img class="aMarble " src="Images\marbles\mongooselogo.jpg" alt="mongoose marble"></li>
-          <li><img class="aMarble " src="Images\marbles\nodejs.png" alt="nodejs marble"></li>
-          <li><img class="aMarble " src="Images\marbles\unity.png" alt="unity marble"></li>
+          <li>   <div class="aMarble"><img class="aMarble " src="Images\marbles\codepen.png" alt="codepen marble"></div></li>
+          <li><div class="aMarble"><img class="aMarble " src="Images\marbles\atom-4-logo-png-transparent.png" alt="atom marble"></div></li>
+          <li><div class="aMarble"><img class="aMarble " src="Images\marbles\Csharp_logo.png" alt="csharp marble"></div></li>
+          <li><div class="aMarble"><img class="aMarble " src="Images\marbles\css.png" alt="css marble"></div></li>
+          <li><div class="aMarble"><img class="aMarble " src="Images\marbles\ejslandscape.png" alt="ejs marble"></div></li>
+          <li><div class="aMarble"><img class="aMarble " src="Images\marbles\git.png" alt="git marble"></div></li>
+          <li><div class="aMarble"><img class="aMarble " src="Images\marbles\html.png" alt="html marble"></li>
+          <li><div class="aMarble"><img class="aMarble " src="Images\marbles\javascript-shield.png" alt="js marble"></div></li>
+          <li><div class="aMarble"><img class="aMarble " src="Images\marbles\mongooselogo.jpg" alt="mongoose marble"></div></li>
+          <li><div class="aMarble"><img class="aMarble " src="Images\marbles\nodejs.png" alt="nodejs marble"></div></li>
+          <li><div class="aMarble"><img class="aMarble " src="Images\marbles\unity.png" alt="unity marble"></div></li>
 
         </ul>
 
@@ -306,8 +306,9 @@ div for x axis one for y and the image itself for spin-->
 
         <div class="philProfileMarbleY">
           <div class="philProfileMarbleX">
+          <div class="aMarble">
             <img class="philProfileMarbleImg rollingClockwise invisible" src="Images\marbles\wellItsAFace.png" alt="My Picture Marble">
-          </div>
+          </div>  </div>
         </div>
       </div>
 
@@ -421,23 +422,27 @@ in 4.3.1 need use order and offset
     <div class="marbleOnShape1">
       <div class="marbleOnShape1Y">
         <div class="marbleOnShape1X">
+                  <div class="aMarble">
           <img class="aMarble " src="Images\marbles\nodejs.png" alt="nodejs marble">
-        </div>
+        </div>  </div>
       </div>
     </div>
 
     <div class="marbleOnShape2">
       <div class="marbleOnShape2Y">
         <div class="marbleOnShape2X">
+                <div class="aMarble">
           <img class="aMarble " src="Images\marbles\Csharp_logo.png" alt="csharp marble">
-        </div>
+        </div>  </div>
       </div>
     </div>
 
     <div class="marbleOnShape3">
       <div class="marbleOnShape3Y">
         <div class="marbleOnShape3X">
+          <div class="aMarble">
           <img class="aMarble " src="Images\marbles\git.png" alt="git marble">
+</div>
         </div>
       </div>
     </div>
