"fixed" clashes with code between carousel magnifier and draw by moving carousel html to bottom which i assume is affecting order the code is called.

--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -123,37 +123,6 @@ also cause a white space at bottom because now contributes to the height-->
 
 <!--carouselDisplayNone causes the cards to be in wrong place-->
 
-<section class="carouselOverlay  carouselDisplayNone"   >
-
-  <div class="carouselOverlayBackground"></div>
-
-
-<div class="wrap">
-  <div id="showcase" class="noselect">
-
-
-  </div>
-
-
-  <button class="nav noselect left">
-    &lt;
-  </button>
-  <button class="nav noselect right">
-    &gt;
-  </button>
-
-
-</div>
-    <div class="wrap"><h1>All/Unity/Js... Projects</h1>  </div>
-    <div class="wrap">
-    <button class="nav noselect bottom">
-    &#x25BC;
-    </button>
-    <button hidden class="nav noselect top"></button>
-  </div>
-
-
-</section>
 
   <section class="page2X0Y1 ">
 
@@ -715,6 +684,27 @@ in 4.3.1 need use order and offset
 
 
   </section>
+
+  <section class="carouselOverlay  carouselDisplayNone"   >
+
+    <div class="carouselOverlayBackground"></div>
+
+
+  <div class="wrap">
+    <div id="showcase" class="noselect"> </div>
+    <button class="nav noselect left">&lt; </button>
+    <button class="nav noselect right">&gt;</button>
+  </div>
+
+      <div class="wrap"><h1>All/Unity/Js... Projects</h1> </div>
+      <div class="wrap">
+      <button class="nav noselect bottom">&#x25BC; </button>
+      <button hidden class="nav noselect top"></button>
+    </div>
+
+
+  </section>
+
 
 
 
