--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -385,31 +385,27 @@ in 4.3.1 need use order and offset
 
 
     <div class="marbleOnShape1">
-      <div class="marbleOnShape1Y">
-        <div class="marbleOnShape1X">
+
                   <div class="aMarble">
-          <img class="aMarble " src="Images\marbles\nodejs.png" alt="nodejs marble">
-        </div>  </div>
+          <img class="aMarbleImg " src="Images\marbles\nodejs.png" alt="nodejs marble">
+
       </div>
     </div>
 
     <div class="marbleOnShape2">
-      <div class="marbleOnShape2Y">
-        <div class="marbleOnShape2X">
+
                 <div class="aMarble">
-          <img class="aMarble " src="Images\marbles\Csharp_logo.png" alt="csharp marble">
-        </div>  </div>
+          <img class="aMarbleImg " src="Images\marbles\Csharp_logo.png" alt="csharp marble">
+
       </div>
     </div>
 
     <div class="marbleOnShape3">
-      <div class="marbleOnShape3Y">
-        <div class="marbleOnShape3X">
+
           <div class="aMarble">
-          <img class="aMarble " src="Images\marbles\git.png" alt="git marble">
+          <img class="aMarbleImg " src="Images\marbles\git.png" alt="git marble">
 </div>
-        </div>
-      </div>
+
     </div>
 
 
