--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -385,25 +385,26 @@ in 4.3.1 need use order and offset
 
 
     <div class="marbleOnShape1">
-
+<div class="aMarbleX"><div class="aMarbleY">
                   <div class="aMarble">
           <img class="aMarbleImg " src="Images\marbles\nodejs.png" alt="nodejs marble">
-
+</div></div>
       </div>
     </div>
 
     <div class="marbleOnShape2">
-
+<div class="aMarbleX"><div class="aMarbleY">
                 <div class="aMarble">
           <img class="aMarbleImg " src="Images\marbles\Csharp_logo.png" alt="csharp marble">
-
+</div></div>
       </div>
     </div>
 
     <div class="marbleOnShape3">
-
+<div class="aMarbleX"><div class="aMarbleY">
           <div class="aMarble">
           <img class="aMarbleImg " src="Images\marbles\git.png" alt="git marble">
+</div></div>
 </div>
 
     </div>
