--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -280,7 +280,7 @@ div for x axis one for y and the image itself for spin-->
 
       <div class="buisnessCardText">
 
-
+<div class="buisnessCardShadow">
         <h1>
           <span class=delayAppear>Hi I'm </span>Phil Tate<span class=delayAppear> a programmer <br>
             & full stack developer <br>
@@ -361,7 +361,7 @@ changes to what it would of been if it had not been at an angle because of hover
             </button>
           </div>
         </h1>
-
+</div>
       </div>
 
 
