--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -712,6 +712,8 @@ in 4.3.1 need use order and offset
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
   <script src="Javascript/utils.js" charset="utf-8"></script>
+  <script src="Javascript/initWebsite.js" charset="utf-8"></script>
+
   <script src="Javascript/pg1.js" charset="utf-8"></script>
   <script src="Javascript/pg2.js" charset="utf-8"></script>
   <script src="Javascript/pg3.js" charset="utf-8"></script>
@@ -720,6 +722,7 @@ in 4.3.1 need use order and offset
 <script src="Javascript/jquery.cloud9carousel.js" charset="utf-8"></script>
 <script src="Javascript/carousel.js" charset="utf-8"></script>
 <script src="Javascript/cards.js" charset="utf-8"></script>
+<script src="Javascript/gradLineYCalc.js" charset="utf-8"></script>
 
 
   <script src="Javascript/testCode.js" charset="utf-8"></script>
